tests/paczka1/fuzzy1/19840934.err
Error in line 7: A7 S480 87,7
Error in line 9: wH8tqPR SB88 48,6
Error in line 13: A7 S288 60,3
Error in line 8: wH8tqPR S288 23,7
Error in line 18: wH8tqPR A7 89,8
Error in line 23: A7 S480 58,4
Error in line 26: A7 S480 45,6
Error in line 27: A7 S862 22,0
Error in line 29: A7 S862 80,3
Error in line 32: nqwcm S480 12,6
Error in line 36: A7 S862 79,0
Error in line 34: nqwcm S862 25,7
